# spark-openstack

./: .editorconfig  .gitignore  .shellcheckrc  pyproject.toml  spark-openstack
ansible/: ansible.cfg  build-image.yml  configure-nodes.yml  get_ip.yml  main.yml  playbook.sh  prepare_internal_runner.yml  setup-experiment-environment.yml  spark_openstack.py  spark_openstack_cmd.py  start-spark-cluster.yml  stop-spark-cluster.yml
ansible/filter_plugins/: filters.py  lookups.py
ansible/roles/basic/tasks/: main.yml
ansible/roles/create/tasks/: destroy_async.yml  destroy_sync.yml  main.yml
ansible/roles/deploy_ssh/tasks/: main.yml
ansible/roles/gather-facts/tasks/: main.yml
ansible/roles/jupyter/tasks/: main.yml  prepare.yml
ansible/roles/jupyterhub/tasks/: main.yml
ansible/roles/mountnfs/tasks/: main.yml
ansible/roles/os_facts/tasks/: main.yml
ansible/roles/packer-spark-common/defaults/: main.yml
ansible/roles/packer-spark-common/tasks/: 00-assertions.yml  (+5 more)
ansible/tasks/: prepare_spark.yml  setup-experiment-environment.yml
packer/: ansible-wrapper.sh  spark-node.pkr.hcl
packer/templates/: inventory-file-template.pkr.hcl
scripts/: _bootstrap-openstack-manager.sh  _common.py  _common.sh  _fix-keystone.sh  _provision_flavor.py  _provision_key.py  _ssh_args.sh  bootstrap-spark-ansible.sh  copy-openrc.sh  create.sh  ctl-git-pull.sh  fix-keystone.sh  fix_keystone.py  provision-flavor.sh  provision-key.sh  provision_key.py
terraform/: config.tf  instances.tf  outputs.tf  terraform.sh  variables.tf
terraform/templates/: terraform-hosts.ini.tftpl
(+34 files in other folders)
