[tool.poetry]
name = 'spark-openstack'
version = '0.0.0'
description = ''
authors = []
license = 'MPL-2.0'

[tool.poetry.dependencies]
python = '^3.10'
ansible = "^5.4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
